[tool.poetry]
name = "odata"
version = "0.3"
description = "A simple library for read/write access to OData services."
license="MIT"
authors = ["Tuomas Mursu <tuomas.mursu@kapsi.fi>, Cristian Libotean <eblis102@gmail.com>"]
readme = "README.md"
packages = [{include = "python_odata"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
python-dateutil = "^2.8.2"
rich = "^13.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
