[metadata]
# 'odata' currently clashes with github.com/odatapy/odata which is 404  :-/
name = odata
version = 0.3
license = MIT

summary = A simple library for read/write access to OData services.
long-description = file: README.md
long-description-content-type = text/markdown
author = Tuomas Mursu
author-email = tuomas.mursu@kapsi.fi
home-page = https://github.com/tuomur/python-odata

require =
    requests>=2.0
    python-dateutil
    enum-compat

tests_require =
    responses

setup_require =
    pbr>=1.8
#    sphinx>=1.5

classifier =
    # 'Development Status :: 4 - Beta',  # Tuomas to make this call :-)
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Database
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries

[files]
packages =
    odata

[wheel]
universal = 1
